--- a/e/master.css
+++ b/e/master.css
@@ -8,8 +8,8 @@ body {
     scroll-margin: 0;
     display: flex;
 
-    height: calc(100vh - 16px);
-    width: calc(100vw - 16px);
+    height: calc(100% - 16px);
+    width: calc(100% - 16px);
     /*height: 100vh;*/
     /*width: 100vw;*/
     justify-content: center;
@@ -17,11 +17,11 @@ body {
     font-size: 12pt;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
     color: #ffffff;
-    background: var(--primary_color);
+    background: var(--primary-color);
 }
 
 :root {
-    --primary_color: #111111;
+    --primary-color: #111111;
 }
 
 .unselectable {
@@ -36,7 +36,7 @@ body {
     justify-content: center;
     text-align: center;
     align-items: center;
-    background: var(--primary_color);
+    background: var(--primary-color);
     border-color: #30363D;
     border-style: solid;
     border-width: 2px;
@@ -54,7 +54,7 @@ body {
 
 .btn:active {
     border-color: #6E7681;
-    background-color: var(--primary_color);
+    background-color: var(--primary-color);
 }
 
 .link-btn {
@@ -332,8 +332,7 @@ input[type="radio"]:checked::before {
 }
 
 @media (max-width: 600px) {
-    .body {
-        height: available;
+    body {
     }
 
     .main_text {
